--- a/YBMBRILiaN/index.html
+++ b/YBMBRILiaN/index.html
@@ -142,8 +142,8 @@
         berdaya.</p>
       <div class="d-flex">
         <a href="#about" class="btn-get-started scrollto">Get Started</a>
-        <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ"
-          class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch
+        <a href="https://youtu.be/wsh0WcN6xpA" class="glightbox btn-watch-video d-flex align-items-center"><i
+            class="bi bi-play-circle"></i><span>Watch
             Video</span></a>
       </div>
     </div>
@@ -319,11 +319,22 @@
         <div class="row g-5">
 
           <div class="col-lg-8 col-md-6 content d-flex flex-column justify-content-center order-last order-md-first">
-            <h3>Alias sunt quas <em>Cupiditate</em> oluptas hic minima</h3>
-            <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-              laborum.</p>
-            <a class="cta-btn align-self-start" href="#">Call To Action</a>
+            <h3>Legal Formal</h3>
+            <h5 class="mt-2">Sebagai lembaga filantropi islam pengelola dana publik, YBM BRILiaN memastikan secara legal
+              telah
+              terdaftar dan disahkan oleh instansi pemegang otoritas, diantaranya sebagai berikut:</h5>
+            <div class="d-flex align-items-center mt-2">
+              <i class="bi bi-check2"></i>&nbsp;&nbsp;
+              <h5>Akta Pendirian Yayasan Baitul Maal BRILiaN No. 02 dari Notasris Ummu Imama, SH.</h5>
+            </div>
+            <div class="d-flex align-items-center mt-2">
+              <i class="bi bi-check2"></i>&nbsp;&nbsp;
+              <h5>SK Kemenkumham: No. AHU-0012669.AH.01.04. Tahun 2021</h5>
+            </div>
+            <div class="d-flex align-items-center mt-2">
+              <i class="bi bi-check2"></i>&nbsp;&nbsp;
+              <h5>Nomor Induk Berusaha: 2810210032591</h5>
+            </div>
           </div>
 
           <div class="col-lg-4 col-md-6 order-first order-md-last d-flex align-items-center">
@@ -1436,14 +1447,7 @@
 
         <div class="d-flex flex-column align-items-center align-items-lg-start">
           <div class="copyright">
-            &copy; Copyright <strong><span>HeroBiz</span></strong>. All Rights Reserved
-          </div>
-          <div class="credits">
-            <!-- All the links in the footer should remain intact. -->
-            <!-- You can delete the links only if you purchased the pro version. -->
-            <!-- Licensing information: https://bootstrapmade.com/license/ -->
-            <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/herobiz-bootstrap-business-template/ -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+            &copy; Copyright <strong><span>Kelompok 1</span></strong>. All Rights Reserved
           </div>
         </div>
 
