--- a/YBMBRILiaN/index.html
+++ b/YBMBRILiaN/index.html
@@ -988,7 +988,7 @@
 
       <div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0"
           marginwidth="0"
-          src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Jl.%20Tawang%20Mangu%20No.37,%20Lingkungan%20Panji,%20Tegalgede,%20Kec.%20Sumbersari,%20Kabupaten%20Jember,%20Jawa%20Timur%2068124+(Bright%20Dormitory%20YBM%20BRI%20POLIJE)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a
+          src="https://maps.google.com/maps?q=Gedung%20Olahraga%20BRI,%20Jl.%20Jend.%20Sudirman%20No.13,%20RW.1,%20Bend.%20Hilir,%20Kecamatan%20Tanah%20Abang,%20Kota%20Jakarta%20Pusat,%20Daerah%20Khusus%20Ibukota%20Jakarta%2010210&t=&z=13&ie=UTF8&iwloc=&output=embed"><a
             href="https://www.gps.ie/sport-gps/">fitness tracker</a></iframe></div><!-- End Google Maps -->
 
       <div class="container">
@@ -998,14 +998,12 @@
           <div class="col-lg-4">
 
             <div class="info">
-              <h3>Get in touch</h3>
-              <p>Et id eius voluptates atque nihil voluptatem enim in tempore minima sit ad mollitia commodi minus.</p>
-
               <div class="info-item d-flex">
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h4>Location:</h4>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <p>Gedung Olahraga BRI, Jl. Jend. Sudirman No.13, RW.1, Bend. Hilir, Kecamatan Tanah Abang, Kota
+                    Jakarta Pusat, Daerah Khusus Ibukota Jakarta 10210</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -1013,7 +1011,7 @@
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h4>Email:</h4>
-                  <p>info@example.com</p>
+                  <p>ybmbrilian@gmail.com/p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -1021,7 +1019,7 @@
                 <i class="bi bi-phone flex-shrink-0"></i>
                 <div>
                   <h4>Call:</h4>
-                  <p>+1 5589 55488 55</p>
+                  <p>0811 808 412</p>
                 </div>
               </div><!-- End Info Item -->
 
